--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,7 +13,7 @@ h2, h4 {
 .app-background {
   min-height: 100vh;
   padding: 2rem;
-  background-image: url('/assets/background.jpg');
+  background-image: url('/assets/background.png');
   background-size: cover;
   background-position: center;
   transition: background-image 0.3s ease;
